# Project-S-QT

./: .gitignore  AIChatDesktop.qbs  CMakeLists.txt  README.md
_b/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  build_err.txt  cmake_install.cmake  debug_contact.txt  debug_contact2.txt  debug_contact3.txt  debug_contact4.txt  debug_contact5.txt  debug_exp.txt  debug_exp2.txt  debug_stderr.txt  debug_stderr10.txt  debug_stderr11.txt  debug_stderr12.txt  debug_stderr13.txt  debug_stderr14.txt  debug_stderr15.txt  debug_stderr2.txt  debug_stderr3.txt  debug_stderr4.txt  debug_stderr5.txt  debug_stderr6.txt  debug_stderr7.txt  debug_stderr8.txt  debug_stderr9.txt  debug_ui_redesign.txt  debug_ui_redesign10.txt  debug_ui_redesign2.txt  debug_ui_redesign3.txt  debug_ui_redesign4.txt  debug_ui_redesign5.txt  debug_ui_redesign6.txt  debug_ui_redesign7.txt  debug_ui_redesign8.txt  debug_ui_redesign9.txt  openapi.json  (+1 more)
_b/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
_b/AIChatDesktopTests_autogen/: deps  moc_predefs.h
_b/AIChatDesktopTests_autogen/4XH6SOYG2C/: moc_CallSignalingClient.cpp.d  moc_ChatStreamClient.cpp.d  moc_HttpClient.cpp.d
_b/AIChatDesktopTests_autogen/GQ6NBGVJMG/: moc_AudioManager.cpp.d  moc_CallManager.cpp  moc_CallManager.cpp.d  moc_ChatService.cpp.d  moc_NotificationService.cpp.d  moc_SyncService.cpp.d  moc_UnreadTracker.cpp  moc_UnreadTracker.cpp.d  moc_VideoManager.cpp.d  moc_WebRtcEngine.cpp.d
_b/AIChatDesktopTests_autogen/OQ3OECGN5T/: moc_TokenManager.cpp  moc_TokenManager.cpp.d
_b/AIChatDesktopTests_autogen/UEBDTUJI3I/: moc_AIUserRepository.cpp.d  moc_AuthRepository.cpp  moc_AuthRepository.cpp.d  moc_CallRepository.cpp.d  moc_ChatRepository.cpp.d  moc_ConversationRepository.cpp.d  moc_ExpansionRepository.cpp.d  moc_MemoryRepository.cpp.d  moc_ProfileRepository.cpp.d  moc_TTSRepository.cpp.d  moc_UploadRepository.cpp.d  moc_UserRepository.cpp.d
_b/AIChatDesktopTests_autogen/include/: tst_ApiError.moc.d  tst_Database.moc.d  tst_JsonHelper.moc.d  tst_SyncService.moc.d  tst_TokenManager.moc  tst_TokenManager.moc.d  tst_UnreadTracker.moc  tst_UnreadTracker.moc.d  tst_UuidGenerator.moc.d
_b/AIChatDesktop_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
_b/AIChatDesktop_autogen/36A7VMLXJR/: moc_LinuxDesktop.cpp  moc_LinuxDesktop.cpp.d  moc_MacDock.cpp  moc_MacDock.cpp.d  moc_PlatformIntegration.cpp  moc_PlatformIntegration.cpp.d  moc_WinTaskbar.cpp  moc_WinTaskbar.cpp.d
_b/AIChatDesktop_autogen/3YJK5W5UP7/: qrc_qml.cpp
_b/AIChatDesktop_autogen/4XH6SOYG2C/: moc_CallSignalingClient.cpp.d  moc_ChatStreamClient.cpp.d  moc_HttpClient.cpp.d
_b/AIChatDesktop_autogen/CDHPDT4PZW/: moc_StyleChecker.cpp  moc_StyleChecker.cpp.d  moc_StyleEngine.cpp  moc_StyleEngine.cpp.d  moc_StyleEngineSetup.cpp  moc_StyleEngineSetup.cpp.d  moc_StyleSet.cpp  moc_StyleSet.cpp.d  moc_StyleSetProps.cpp  moc_StyleSetProps.cpp.d  moc_StylesDirWatcher.cpp  moc_StylesDirWatcher.cpp.d
_b/AIChatDesktop_autogen/GQ6NBGVJMG/: moc_AudioManager.cpp  moc_AudioManager.cpp.d  moc_CallManager.cpp.d  moc_ChatService.cpp  moc_ChatService.cpp.d  moc_NotificationService.cpp.d  moc_SyncService.cpp.d  moc_UnreadTracker.cpp.d  moc_VideoManager.cpp.d  moc_WebRtcEngine.cpp.d
_b/AIChatDesktop_autogen/OQ3OECGN5T/: moc_TokenManager.cpp.d
_b/AIChatDesktop_autogen/QGUZWGM6RH/: moc_ChatMessagesModel.cpp  moc_ChatMessagesModel.cpp.d  moc_ContactListModel.cpp  moc_ContactListModel.cpp.d  moc_ConversationListModel.cpp  moc_ConversationListModel.cpp.d  moc_LoginViewModel.cpp  moc_LoginViewModel.cpp.d  moc_SettingsViewModel.cpp  moc_SettingsViewModel.cpp.d
_b/AIChatDesktop_autogen/QWNOQLMVAQ/: moc_SecondaryWindow.cpp  moc_SecondaryWindow.cpp.d
_b/AIChatDesktop_autogen/STUJMRYCEW/: moc_ThemeManager.cpp  moc_ThemeManager.cpp.d
_b/AIChatDesktop_autogen/UEBDTUJI3I/: moc_AIUserRepository.cpp  moc_AIUserRepository.cpp.d  moc_AuthRepository.cpp.d  moc_CallRepository.cpp.d  moc_ChatRepository.cpp.d  moc_ConversationRepository.cpp.d  moc_ExpansionRepository.cpp  moc_ExpansionRepository.cpp.d  moc_MemoryRepository.cpp  (+6 more)
_b/test_ApiError_autogen/: deps
_b/test_Database_autogen/: deps  mocs_compilation.cpp
_b/test_JsonHelper_autogen/: deps
_b/test_SyncService_autogen/: deps
_b/test_TokenManager_autogen/: deps
_b/test_UnreadTracker_autogen/: deps
_b/test_UuidGenerator_autogen/: deps  moc_predefs.h
_b/translations/: qt_ca.qm  qt_de.qm  qt_es.qm  qt_fr.qm  qt_ja.qm  qt_ka.qm  qt_ko.qm  qt_pl.qm  qt_pt_BR.qm  qt_ru.qm  qt_sv.qm  qt_tr.qm  qt_uk.qm  qt_zh_CN.qm
cmake/: FindLibDataChannel.cmake
docs/: SMOKE_TEST.md
resources/: icon.py  qml.qrc
resources/qml/: AppState.qml  main.qml
resources/themes/: dark.css  glass.css  light.css
src/: main.cpp
src/platform/: LinuxDesktop.cpp  LinuxDesktop.h  MacDock.cpp  MacDock.h  PlatformIntegration.cpp  PlatformIntegration.h  WinTaskbar.cpp  WinTaskbar.h
src/repositories/: AIUserRepository.cpp  AIUserRepository.h  AuthRepository.cpp  AuthRepository.h  CallRepository.cpp  CallRepository.h  ChatRepository.cpp  ChatRepository.h  ConversationRepository.cpp  ConversationRepository.h  ExpansionRepository.cpp  ExpansionRepository.h  MemoryRepository.cpp  MemoryRepository.h  ProfileRepository.cpp  ProfileRepository.h  TTSRepository.cpp  TTSRepository.h  UploadRepository.cpp  UploadRepository.h  UserRepository.cpp  UserRepository.h
src/services/: AudioManager.cpp  AudioManager.h  CallManager.cpp  CallManager.h  ChatService.cpp  ChatService.h  NotificationService.cpp  NotificationService.h  SyncService.cpp  SyncService.h  UnreadTracker.cpp  UnreadTracker.h  VideoManager.cpp  VideoManager.h  WebRtcEngine.cpp  WebRtcEngine.h
src/viewmodels/: ChatMessagesModel.cpp  ChatMessagesModel.h  ContactListModel.cpp  ContactListModel.h  ConversationListModel.cpp  ConversationListModel.h  LoginViewModel.cpp  LoginViewModel.h  SettingsViewModel.cpp  SettingsViewModel.h
tests/: tst_ApiError.cpp  tst_Database.cpp  tst_JsonHelper.cpp  tst_SyncService.cpp  tst_TokenManager.cpp  tst_UnreadTracker.cpp  tst_UuidGenerator.cpp
(+266 files in other folders)
